# LIRMC

./: README.md  pyproject.toml
lirpy/: __main__.py  mask.py  rect.py
