[tool.poetry]
name = "lirpy"
version = "0.0.2"
description = ""
authors = ["Rob Nelson <nexisentertainment@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = {extras = ["d"], version = "^23.3.0"}
isort = "^5.12.0"
twine = "^4.0.2"

[tool.poetry.scripts]
lirpy = "lirpy.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
